--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -4,7 +4,7 @@
         <p class="banner-text">
             Join the <span class="banner-highlight">AI for Clinicians Community</span> Waitlist!
         </p>
-        <a class="banner-cta-button" href="./community">Join Now</a>
+        <a class="banner-cta-button" href="/community">Join Now</a>
         <button class="banner-close-button" onclick="closeBanner()" aria-label="Close banner">&times;</button>
     </div>
 </aside>
