--- a/_layouts/circle-community.html
+++ b/_layouts/circle-community.html
@@ -52,6 +52,6 @@
         {{ content }}
     </main>
     <footer class="c-footer">
-        <p>&copy; 2025 AI for Clinicians. Empowering clinicians with AI innovation.</p>
+        <p>&copy; 2025 AI for Clinicians.</p>
     </footer>
 </body>
