--- a/_includes/email-verified.html
+++ b/_includes/email-verified.html
@@ -4,7 +4,7 @@
         <div class="booking-form">
             <h2 style="margin-bottom: 1rem;">Email Address Verified</h2>
             <p>Thank you for verifying your email address.</p>
-            <p>Congratulations on being an early bird signee!</p>
+            <p>Congratulations on being an Early Bird signee!</p>
         </div>
     </div>
 </div>
