--- a/community/styles/memberships.css
+++ b/community/styles/memberships.css
@@ -57,12 +57,20 @@
     color: var(--text-dark);
 }
 
+.header-title.margin-top {
+    margin-top: 12px;
+}
+
 .card-header p {
     color: var(--text-dark);
     opacity: 0.7;
     font-size: 0.9rem;
     line-height: 1.5;
     margin: 0;
+}
+
+.card-header-subtext {
+    min-height: 65px;
 }
 
 /* Price Container */
@@ -108,6 +116,7 @@
     list-style: none;
     padding: 0;
     margin: 20px 0;
+    flex-grow: 1;
 }
 
 .features-list li {
@@ -155,6 +164,12 @@
 }
 
 /* Featured Plan */
+.c-badge.limited-badge-position {
+    position: absolute;
+    top: 28px;
+    right: 5px;
+}
+
 .c-feature.featured {
     border: 3px solid var(--primary-accent);
     box-shadow: 0 15px 50px rgba(212, 175, 55, 0.25);
