--- a/community/styles/memberships.css
+++ b/community/styles/memberships.css
@@ -166,7 +166,7 @@
 /* Featured Plan */
 .c-badge.limited-badge-position {
     position: absolute;
-    top: 28px;
+    top: 24px;
     right: 5px;
 }
 
@@ -184,6 +184,18 @@
 
 .c-feature.featured:hover {
     transform: scale(1.02) translateY(-8px);
+}
+
+/* Disabled Card */
+.c-feature.disabled {
+    filter: grayscale(100%);
+    opacity: 0.7;
+    pointer-events: none; /* Disables mouse events */
+}
+
+.c-feature.disabled .c-submit-button {
+    background: #bdc3c7; /* A light grey for the button */
+    cursor: not-allowed;
 }
 
 /* Animations */
