--- a/_layouts/circle-community.html
+++ b/_layouts/circle-community.html
@@ -16,9 +16,10 @@
     <link rel="stylesheet" href="/community/styles/tooltip.css">
 
     <!-- Media Queries -->
-    <link rel="stylesheet" href="/community/styles/media-queries/max-width-640.css">
+    <link rel="stylesheet" href="/community/styles/media-queries/max-width-768.css">
     <link rel="stylesheet" href="/community/styles/media-queries/max-width-968.css">
     <link rel="stylesheet" href="/assets/css/theme-switch.css">
+    <link rel="stylesheet" href="/community/styles/toggle.css">
 
     <!-- JS -->
     <script src="/community/scripts/coming-soon.js"></script>
@@ -26,6 +27,7 @@
     <script src="/community/scripts/memberships.js"></script>
     <script src="/community/scripts/waitlist.js"></script>
     <script src="/assets/js/theme-switch.js"></script>
+    <script src="/community/scripts/pricing-toggle.js"></script>
 </head>
 
 <body>
