--- a/community/styles/memberships.css
+++ b/community/styles/memberships.css
@@ -104,7 +104,7 @@
     margin-top: 8px;
 }
 
-.price-period {
+.price-period, .price-period-annually {
     color: var(--text-dark);
     opacity: 0.6;
     font-size: 0.9rem;
