--- a/community/styles/memberships.css
+++ b/community/styles/memberships.css
@@ -98,6 +98,16 @@
     margin-bottom: 8px;
 }
 
+.price-original {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--text-dark);
+    opacity: 0.5;
+    text-decoration: line-through;
+    margin-top: 8px;
+    margin-right: 8px;
+}
+
 .price-currency {
     font-size: 1.8rem;
     font-weight: 700;
