--- a/community/styles/main-community.css
+++ b/community/styles/main-community.css
@@ -219,9 +219,13 @@ body {
 
 .c-features {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     gap: 20px;
-    margin: 30px 0 0 0;
+    margin: 30px auto 0;
+    justify-items: center;
 }
 
 .c-feature {
