--- a/_layouts/circle-community.html
+++ b/_layouts/circle-community.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/assets/images/base/favicon.ico" />
-    <title>AI for Clinicians - Join the Waitlist</title>
+    <title>AI for Clinicians - Join Our Community</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="/community/styles/main-community.css">
