--- a/_layouts/circle-community.html
+++ b/_layouts/circle-community.html
@@ -9,13 +9,14 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/community/styles/main-community.css">
-    <link rel="stylesheet" href="/community/styles/coming-soon.css">
+    <!-- <link rel="stylesheet" href="/community/styles/coming-soon.css"> -->
     <link rel="stylesheet" href="/community/styles/landing-page.css">
     <link rel="stylesheet" href="/community/styles/memberships.css">
     <link rel="stylesheet" href="/assets/css/theme-switch.css">
     <link rel="stylesheet" href="/community/styles/toggle.css">
     <link rel="stylesheet" href="/community/styles/tooltip.css">
     <link rel="stylesheet" href="/community/styles/waitlist.css">
+    <link rel="stylesheet" href="/community/styles/video-benefits.css">
 
     <!-- Media Queries -->
     <link rel="stylesheet" href="/community/styles/media-queries/max-width-640.css">
@@ -23,8 +24,6 @@
 
 
     <!-- JS -->
-    <script src="/community/scripts/coming-soon.js"></script>
-    <script src="/community/scripts/landing-page.js"></script>
     <script src="/community/scripts/memberships.js"></script>
     <script src="/community/scripts/waitlist.js"></script>
     <script src="/assets/js/theme-switch.js"></script>
