--- a/_layouts/circle-community.html
+++ b/_layouts/circle-community.html
@@ -28,6 +28,7 @@
     <script src="/community/scripts/waitlist.js"></script>
     <script src="/assets/js/theme-switch.js"></script>
     <script src="/community/scripts/pricing-toggle.js"></script>
+    <script src="/community/scripts/smooth-scroll.js"></script>
 </head>
 
 <body>
